wordpress/advocate/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wp-advocate
  namespace: wordpress
spec:
  ports:
  - port: 80
    targetPort: 443
  selector:
    wordpress-site: advocate
