wordpress/advocate/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    ingress.kubernetes.io/force-ssl-redirect: 'true'
    io.cilium/websocket: enabled
    kubernetes.io/tls-acme: 'true'
    projectcontour.io/websocket-routes: /
  name: wp-advocate
  namespace: wordpress
spec:
  ingressClassName: contour
  rules:
  - host: advocate.wp.ocfhosted.com
    http:
      paths:
      - backend:
          service:
            name: wp-advocate
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - advocate.wp.ocfhosted.com
    secretName: wp-advocate-tls
